39.certmanager/spk-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spk-ingress
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - www.spkr.io
    secretName: spkr-tls
  rules:
  - host: www.spkr.io
    http:
      paths:
      - backend:
          serviceName: tea-svc
          servicePort: 80
        path: /tea
      - backend:
          serviceName: coffee-svc
          servicePort: 80
        path: /coffee
